fixed navigation behaviour on mobile

--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -9,6 +9,8 @@ nav {
     font-family: Sintony, sans-serif;
 }
 
+
+
 .logo {
     font-family: Sintony, sans-serif;
     font-size: 1rem;
@@ -60,6 +62,12 @@ nav {
 }
 
 @media (max-width:720px) {
+    nav {
+        position: sticky;
+        top: 0;
+        backdrop-filter: blur(1rem);
+    }
+
     .navlinks {
         flex-direction: column;
         background-color: whitesmoke;
@@ -87,4 +95,6 @@ nav {
     .navToggle {
         visibility: visible;
     }
+
+
 }
